--- a/style/main.nested.css
+++ b/style/main.nested.css
@@ -1,44 +1,15 @@
-/* line 1, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
+/* line 1, ../style/main.sass */
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: "Lato","Helvetica Neuve",Helvetica,Arial,sans-serif;
+  font-size: 15px; }
 
-/* line 5, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-.header_main_menu {
-  height: 80px;
-  background-color: #e1e1e1; }
-  /* line 8, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-  .header_main_menu .logo_container {
-    width: 20%; }
-    /* line 10, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-    .header_main_menu .logo_container img {
-      width: 100%;
-      vertical-align: middle; }
-  /* line 13, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-  .header_main_menu .logo_container, .header_main_menu h1, .header_main_menu .menu {
-    display: inline-block; }
-  /* line 15, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-  .header_main_menu h1 {
-    margin: 0 auto; }
-  /* line 17, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-  .header_main_menu .menu {
-    float: right;
-    margin-right: 100px;
-    padding: 10px;
-    padding-top: 15px; }
-    /* line 22, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-    .header_main_menu .menu li {
-      list-style: none;
-      display: inline-block; }
-  /* line 25, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-  .header_main_menu .service {
-    background: grey;
-    display: block;
-    position: absolute; }
-    /* line 29, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-    .header_main_menu .service li {
-      display: block;
-      padding: 10px;
-      padding-top: 15px;
-      text-align: center; }
+/* line 8, ../style/main.sass */
+.item img {
+  height: auto; }
+
+/* line 10, ../style/main.sass */
+.slider_container {
+  margin: 0 auto; }
