--- a/style/main.sass
+++ b/style/main.sass
@@ -2,32 +2,10 @@
   box-sizing: border-box
   margin: 0
   padding: 0
-.header_main_menu
-  height: 80px
-  background-color: #e1e1e1
-  .logo_container
-    width: 20%
-    img
-      width: 100%
-      vertical-align: middle
-  .logo_container,h1,.menu
-    display: inline-block
-  h1
-    margin: 0 auto
-  .menu
-    float: right
-    margin-right: 100px
-    padding: 10px
-    padding-top: 15px
-    li
-      list-style: none
-      display: inline-block
-  .service
-    background: grey
-    display: block
-    position: absolute
-    li
-      display: block
-      padding: 10px
-      padding-top: 15px
-      text-align: center
+  font-family: "Lato","Helvetica Neuve",Helvetica,Arial,sans-serif
+  font-size: 15px
+.item
+  img
+    height: auto
+.slider_container
+  margin: 0 auto
