--- a/style/main.css
+++ b/style/main.css
@@ -1,62 +1,60 @@
-/* line 1, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-/* line 5, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-.header_main_menu {
-  height: 80px;
-  background-color: #e1e1e1;
-}
-
-/* line 8, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-.header_main_menu .logo_container {
-  width: 20%;
-}
-
-/* line 10, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-.header_main_menu .logo_container img {
+header {
   width: 100%;
-  vertical-align: middle;
 }
 
-/* line 13, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-.header_main_menu .logo_container, .header_main_menu h1, .header_main_menu .menu {
-  display: inline-block;
-}
-
-/* line 15, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-.header_main_menu h1 {
+header .main_header_content {
+  width: 80%;
   margin: 0 auto;
 }
 
-/* line 17, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-.header_main_menu .menu {
-  float: right;
-  margin-right: 100px;
-  padding: 10px;
-  padding-top: 15px;
+header .header_main_menu .main_logo {
+  width: 30%;
 }
 
-/* line 22, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-.header_main_menu .menu li {
+header .header_main_menu .main_logo li {
   list-style: none;
   display: inline-block;
 }
 
-/* line 25, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-.header_main_menu .service {
-  background: grey;
+header .header_main_menu .main_logo li a {
   display: block;
-  position: absolute;
 }
 
-/* line 29, Users/Steve/Documents/sms_concour_version_2/style/main.sass */
-.header_main_menu .service li {
-  display: block;
-  padding: 10px;
-  padding-top: 15px;
-  text-align: center;
+header .header_main_menu .main_logo li a:hover {
+  text-decoration: none;
+}
+
+header .header_main_menu .main_logo li:first-of-type {
+  width: 66%;
+}
+
+header .header_main_menu .main_logo li:first-of-type img {
+  width: 100%;
+}
+
+header .main_menu {
+  width: 30%;
+}
+
+header .main_menu li {
+  list-style: none;
+  display: inline-block;
+}
+
+header .main_menu li a {
+  color: black;
+}
+
+header .main_menu li a:hover {
+  text-decoration: none;
+}
+
+header .main_logo, header .main_menu {
+  display: inline-block;
 }
