--- a/style/main.nested.css
+++ b/style/main.nested.css
@@ -47,3 +47,8 @@ header {
     height: 274px;
     padding: 3px;
     float: left; }
+  .main_content .examen_concours {
+    margin-top: 5%;
+    background-color: grey; }
+    .main_content .examen_concours h2 {
+      text-align: center; }
