--- a/style/main.sass
+++ b/style/main.sass
@@ -49,3 +49,9 @@ header
       padding: 3px
       @extend .radius_border
       float: left
+
+  .examen_concours
+    margin-top: 5%
+    background-color: grey
+    h2
+      text-align: center
