--- a/style/main.compact.css
+++ b/style/main.compact.css
@@ -33,3 +33,7 @@ header .main_logo, header .main_menu { display: inline-block; }
 .main_content .owl-carousel { margin-bottom: 5%; }
 
 .main_content .concours img { width: 33.33333%; height: 274px; padding: 3px; float: left; }
+
+.main_content .examen_concours { margin-top: 5%; background-color: grey; }
+
+.main_content .examen_concours h2 { text-align: center; }
