--- a/style/main.css
+++ b/style/main.css
@@ -1,90 +1,120 @@
+/* line 1, ../style/main.sass */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-.radius_border, .main_content .concours img {
+/* line 6, ../style/main.sass */
+.radius_border, .main_content .concours img, .examen_concours .concours_wrapper {
   border-radius: 6px;
 }
 
+/* line 8, ../style/main.sass */
 header {
   width: 100%;
   margin-bottom: 5%;
+  background-color: #e1e1e1;
 }
 
+/* line 12, ../style/main.sass */
 header .main_header_content {
   width: 65%;
   margin: 0 auto;
 }
 
+/* line 16, ../style/main.sass */
 header .header_main_menu .main_logo {
   width: 45%;
 }
 
+/* line 18, ../style/main.sass */
 header .header_main_menu .main_logo li {
   list-style: none;
   display: inline-block;
 }
 
+/* line 21, ../style/main.sass */
 header .header_main_menu .main_logo li a {
   display: block;
 }
 
+/* line 23, ../style/main.sass */
 header .header_main_menu .main_logo li a:hover {
   text-decoration: none;
 }
 
+/* line 25, ../style/main.sass */
 header .header_main_menu .main_logo li:first-of-type {
   width: 60%;
 }
 
+/* line 27, ../style/main.sass */
 header .header_main_menu .main_logo li:first-of-type img {
   width: 100%;
 }
 
+/* line 29, ../style/main.sass */
 header .main_menu {
   width: 54.5%;
 }
 
+/* line 31, ../style/main.sass */
 header .main_menu li {
   list-style: none;
   display: inline-block;
 }
 
+/* line 34, ../style/main.sass */
 header .main_menu li a {
   color: black;
 }
 
+/* line 36, ../style/main.sass */
 header .main_menu li a:hover {
   text-decoration: none;
 }
 
+/* line 38, ../style/main.sass */
 header .main_logo, header .main_menu {
   display: inline-block;
 }
 
+/* line 41, ../style/main.sass */
 .main_content {
   width: 65%;
   margin: 0 auto;
 }
 
+/* line 44, ../style/main.sass */
 .main_content .owl-carousel {
   margin-bottom: 5%;
 }
 
+/* line 47, ../style/main.sass */
 .main_content .concours img {
-  width: 33.33333%;
+  width: 32.33%;
   height: 274px;
-  padding: 3px;
-  float: left;
+  display: inline-block;
 }
 
-.main_content .examen_concours {
-  margin-top: 5%;
-  background-color: grey;
+/* line 52, ../style/main.sass */
+.main_content .concours img:nth-of-type(2) {
+  margin: 10px;
 }
 
-.main_content .examen_concours h2 {
+/* line 56, ../style/main.sass */
+.examen_concours .concours_wrapper {
+  background-color: #e1e1e1;
+}
+
+/* line 59, ../style/main.sass */
+.examen_concours .concours_wrapper h2 {
   text-align: center;
+  padding: 10px;
+}
+
+/* line 62, ../style/main.sass */
+.examen_concours .concours_wrapper h2:first-of-type {
+  padding: 15;
 }
